# swagger_server/swagger/swagger.yaml
@@ -9,84 +9,92 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   version: 1.0.0
 servers:
-- url: https://virtserver.swaggerhub.com/tutorial/1.0.0
+- url: https://virtserver.SwaggerHub.com/tutorial/1.0.0
   description: SwaggerHub API Auto Mocking
 paths:
   /student/{student_id}:
     get:
       summary: gets student
-      operationId: getStudentById
       description: |
         Returns a single student
+      operationId: get_student_by_id
       parameters:
-        - in: path
-          name: student_id
-          description: the uid
-          required: true
-          schema:
-            type: number
-            format: integer
+      - name: student_id
+        in: path
+        description: the uid
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: number
+          format: integer
       responses:
-        '200':
+        "200":
           description: successful operation
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Student'
-        '400':
+        "400":
           description: invalid ID
-        '404':
+        "404":
           description: not found
+      x-openapi-router-controller: swagger_server.controllers.default_controller
     delete:
       summary: deletes a student
       description: |
         delete a single student
       operationId: delete_student
       parameters:
-        - name: student_id
-          in: path
-          description: the uid
-          required: true
-          schema:
-            type: number
-            format: integer
+      - name: student_id
+        in: path
+        description: the uid
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: number
+          format: integer
       responses:
         "200":
           description: OK
         "400":
-          description: Bad request.
+          description: Invalid Id
         "404":
-          description: A student with the specified ID was not found.
+          description: Not found.
+      x-openapi-router-controller: swagger_server.controllers.default_controller
   /student:
     post:
       summary: Add a new student
-      operationId: addStudent
       description: Adds an item to the system
+      operationId: add_student
+      requestBody:
+        description: Student item to add
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Student'
       responses:
-        '200':
+        "200":
           description: created
           content:
             application/json:
               schema:
                 type: number
                 format: integer
-        '400':
-          description: 'invalid input, object invalid'
-        '409':
+                x-content-type: application/json
+        "400":
+          description: "invalid input, object invalid"
+        "409":
           description: an existing already exists
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Student'
-        description: Student item to add
+      x-openapi-router-controller: swagger_server.controllers.default_controller
 components:
   schemas:
     Student:
-      type: object
       required:
-        - first_name
-        - last_name
+      - first_name
+      - last_name
+      type: object
       properties:
         student_id:
           type: integer
@@ -98,15 +106,28 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/GradeRecord'
+      example:
+        student_id: 0
+        last_name: last_name
+        first_name: first_name
+        gradeRecords:
+        - grade: 6.027456183070403
+          subject_name: subject_name
+        - grade: 6.027456183070403
+          subject_name: subject_name
     GradeRecord:
-      type: object
       required:
-        - subject_name
-        - grade
+      - grade
+      - subject_name
+      type: object
       properties:
         subject_name:
           type: string
         grade:
-          type: number
-          minimum: 0
           maximum: 10
+          minimum: 0
+          type: number
+      example:
+        grade: 6.027456183070403
+        subject_name: subject_name
+
